2006-05-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-mode): Use shell-dirtrack-mode
	if possible.

	* haskell-hugs.el (haskell-hugs-start-process):
	* haskell-ghci.el (haskell-ghci-start-process):
	Use comint-input-filter-functions rather than the outdated
	comint-input-sentinel.  Reported by Jerry James <james@xemacs.org>.

2005-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent.hs: Add some erroneous cases.

	* haskell-font-lock.el (haskell-font-lock-keywords-create):
	Minor regexp fiddling.

2005-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-next-symbol): Simplify.
	(haskell-indent-comment): Rename from haskell-indent-inside-comment.
	(haskell-indent-skip-lexeme-forward)
	(haskell-indent-offset-after-info, haskell-indent-hanging-p): New funs.
	(haskell-indent-inhibit-after-offset, haskell-indent-dont-hang):
	New variables.
	(haskell-indent-closing-keyword, haskell-indent-after-keyword-column)
	(haskell-indent-inside-paren): New functions, extracted
	from haskell-indent-indentation-info.  Use the above new functions.
	(haskell-indent-indentation-info): Use them.
	(haskell-indent-after-keywords): Add data for ( and {.

	* haskell-font-lock.el (haskell-font-lock-keywords-create): `as' is not
	a reserved keyword, apparently, and is used as var name.

2005-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-*.el (turn-(on|off)-*): Make non-interactive.

	* haskell-decl-scan.el (haskell-decl-scan-mode): New minor mode.
	(turn-on-haskell-decl-scan): Use it.

	* haskell-doc.el (haskell-doc-extract-types): Get labelled data working.
	(haskell-doc-prelude-types): Update via auto-generation.

	* haskell-doc.el (haskell-doc-extract-types): Get it partly working.
	(haskell-doc-fetch-lib-urls): Don't use a literal if we apply
	`nreverse' on it later on.
	(haskell-doc-prelude-types): Update some parts by auto-generation.
	(haskell-doc-grab, haskell-doc-string-nub-ws): Simplify.